# rock_solid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  acc.csv  config.toml  neural_network.config  neural_network.toml
csv/: acc2024-2-26_14_4_44.csv  acc2024-2-26_15_27_40.csv  acc2024-2-27_17_22_7.csv  acc2024-2-28_15_24_14.csv  acc2024-3-8_11_19_59.csv  acc2024-3-8_12:54:38.csv  acc2024-3-8_13:40:47.csv  acc2024-3-9_21:49:48.csv
lib/: mountain_lake  mountain_town
src/: CMakeLists.txt  main.cpp
src/lib/: general.cpp  general.h
src/mnist/: mnist.cpp  mnist.h
src/neural_network/: layers.cpp  layers.h  neural_network.cpp  neural_network.h
tests/: CMakeLists.txt  main_test.cpp
tests/mnist/: mnist_test.cpp
tests/testdata/: config.toml
